[tool.poetry]
name = "sqlean"
version = "0.0.1"
description = "Clean your SQL queries"
authors = ["Oliver Chen <oliver.chen@traveloka.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
lark = "^0.12"
rich = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-black = "^0.3"
pytest-cov = "^3.0"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.8"
pytest-pylint = "^0.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["sqlean", "tests"]
flake8-max-line-length = 88
markers = ["generate_snapshots"]

[tool.coverage.run]
omit = ["tests/*", "sqlean/parsetab.py"]
