[tool.poetry]
name = "sqlean"
version = "0.0.2"
description = "Clean your SQL queries"
authors = ["Oliver Chen <oliverxchen@gmail.com>"]
keywords = ["sql", "linter"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/oliverxchen/sqlean"
repository = "https://github.com/oliverxchen/sqlean"
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
black = ">=21.4b"
lark = ">=1.1.0"
pydantic = ">=1.8.2"
rich = ">=10.0"
tomli = ">=1.0.0"
typer = ">=0.4.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
pytest-black = ">=0.3"
pytest-cov = ">=3.0"
pytest-flake8 = ">=1.0"
pytest-mock = ">=3.6"
pytest-mypy = ">=0.8"
pytest-pylint = ">=0.18"
types-click = ">=7.1"

[tool.poetry.scripts]
sqlean = "sqlean.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["sqlean", "tests"]
flake8-max-line-length = 88
markers = ["generate_snapshots"]

[tool.mypy]
strict = "True"
warn_unused_ignores = "False"

[tool.pylint.master]
ignore-paths = "tests/"
min-public-methods = 1

[tool.pylint.miscellaneous]
notes = "FIXME"

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
